--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Học f8</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Học f8</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
- <div class="container">
-   <p>大亜ソイル株式会社は、創業から30年以上にわたり、あらゆる構造物の基礎を支える「基礎工事・杭工事」を手がけてまいりました。その中で常に心がけていることは、構造物を安全・確実に支持できる基礎杭を築造すること。そのために、特許工法を含めた数々の工法を使い分け、安全性や施工精度を高めています。</p>
- </div>
-  <script src="script.js"></script>
-</body>
-
+  <body>
+    <div class="container">
+      <p>
+        経済性に優れ、環境に優しい杭工法です。杭先端の螺旋状の羽根の効果により大きな鉛直支持力と引き抜き耐力を発揮します。
+      </p>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
